--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,20 @@
 [package]
 name = "devto-bot-kick"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+console_error_panic_hook = "0.1.6"
+dioxus = "0.3.2"
+dioxus-web = "0.3.1"
+wasm-bindgen = "0.2.86"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "console",
+    "Window"
+]
